<resources>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="identifier">Email / Username / Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa password?</string>
    <string name="username">Username</string>
    <string name="do_not_have_any_accounts">Masih belum punya akun? <font color='#F9AB4E'>Daftar</font></string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="already_have_accounts">Sudah memiliki akun? <font color='#F9AB4E'>Masuk</font></string>
    <string name="full_name">Nama Lengkap</string>
    <string name="confirm_password">Konfirmasi Password</string>
</resources>